fix: fix button appearance on safari

--- a/src/theme/components/Button.styl
+++ b/src/theme/components/Button.styl
@@ -51,6 +51,8 @@ applyColors(colors = {})
   border-radius: 2px
   border: 1px solid transparent
   display: inline-block
+  appearance: none
+  cursor: default
 
   for type, colors in $stylings
     &.{type}
